--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "axios": "^1.6.5",
     "axios-cache-interceptor": "^1.4.1",
+    "classnames": "^2.5.1",
     "pokenode-ts": "^1.20.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
@@ -22,12 +24,12 @@
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.55.0",
     "autoprefixer": "10.4.16",
+    "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "tailwindcss": "3.3.5",
     "typescript": "^5.2.2",
-    "vite": "^5.0.8",
-    "tailwindcss": "3.3.5"
+    "vite": "^5.0.8"
   }
 }
